[gd_scene load_steps=15 format=3 uid="uid://fgp38c1lqwhg"]

[ext_resource type="Script" uid="uid://dqdj75sbo1y5u" path="res://scripts/Registro.gd" id="1_ogdb8"]
[ext_resource type="Texture2D" uid="uid://sk4edt1vteia" path="res://assets/scenes/mujer_BG.png" id="2_hjgyw"]
[ext_resource type="Texture2D" uid="uid://b48e4np3gntfa" path="res://assets/chat/mujer_movil_BG.png" id="3_y6r3l"]
[ext_resource type="Texture2D" uid="uid://b5xdhws1vred3" path="res://assets/chat/mujer_manos.png" id="4_h7380"]
[ext_resource type="Texture2D" uid="uid://ok2mtew4hfsq" path="res://assets/ui/botones/dating_app_logo.png" id="5_hjgyw"]
[ext_resource type="FontFile" uid="uid://dau58fdkdok2k" path="res://assets/fonts/Cherry_Bomb_One/CherryBombOne-Regular.ttf" id="5_hxmf3"]
[ext_resource type="FontFile" uid="uid://c4o3xjoyseo1d" path="res://assets/fonts/Cherry_Bomb_One/Outfit/static/Outfit-Bold.ttf" id="6_g1klr"]
[ext_resource type="Texture2D" uid="uid://cafgu6uwdrg8t" path="res://assets/ui/botones/boton_next_enable.png" id="7_7ejn5"]
[ext_resource type="Texture2D" uid="uid://fos6r4dkhmtf" path="res://assets/ui/botones/boton_next_pressed.png" id="8_li4jt"]
[ext_resource type="Texture2D" uid="uid://bv4sdthu38woq" path="res://assets/ui/botones/boton_back_disable.png" id="9_dd882"]
[ext_resource type="Texture2D" uid="uid://b81jox36n1p3m" path="res://assets/ui/botones/boton_back_enable.png" id="10_2s7o4"]
[ext_resource type="Texture2D" uid="uid://cdowxou7i2sp8" path="res://assets/ui/botones/boton_back_pressed.png" id="11_udors"]
[ext_resource type="Texture2D" uid="uid://bjwsnkc2wimq1" path="res://assets/ui/botones/boton_next_disable.png" id="12_3g4gq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_blml6"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.329412, 0.0666667, 0.0705882, 1)
corner_radius_top_left = 11
corner_radius_top_right = 11
corner_radius_bottom_right = 11
corner_radius_bottom_left = 11

[node name="PantallaRegistro2" type="Node2D"]
script = ExtResource("1_ogdb8")

[node name="Mujer_Frame" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hjgyw")
expand_mode = 3

[node name="Mujer_Movil" type="TextureRect" parent="."]
offset_left = 497.0
offset_top = 98.0
offset_right = 781.0
offset_bottom = 596.0
texture = ExtResource("3_y6r3l")

[node name="Label2" type="Label" parent="Mujer_Movil"]
offset_left = 57.5
offset_top = 133.0
offset_right = 226.5
offset_bottom = 156.0
theme_override_colors/font_color = Color(0.305882, 0.0313726, 0.0313726, 1)
theme_override_fonts/font = ExtResource("6_g1klr")
theme_override_font_sizes/font_size = 14
text = "Elige a tu match perfecto"

[node name="DatingAppLogo" type="TextureRect" parent="Mujer_Movil"]
offset_left = 17.0
offset_top = 19.0
offset_right = 261.0
offset_bottom = 137.0
texture = ExtResource("5_hjgyw")

[node name="Mujer_Manos" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 721.0
texture = ExtResource("4_h7380")

[node name="btn_go_edad" type="TextureButton" parent="."]
offset_left = 711.0
offset_top = 355.0
offset_right = 751.0
offset_bottom = 395.0
texture_normal = ExtResource("7_7ejn5")
texture_pressed = ExtResource("8_li4jt")
texture_disabled = ExtResource("9_dd882")

[node name="btn_back_inicio" type="TextureButton" parent="."]
offset_left = 538.0
offset_top = 355.0
offset_right = 578.0
offset_bottom = 395.0
texture_normal = ExtResource("10_2s7o4")
texture_pressed = ExtResource("11_udors")
texture_disabled = ExtResource("12_3g4gq")
flip_v = true

[node name="Label3" type="Label" parent="."]
offset_left = 530.0
offset_top = 260.0
offset_right = 689.0
offset_bottom = 290.0
theme_override_colors/font_color = Color(0.305882, 0.0313726, 0.0313726, 1)
theme_override_fonts/font = ExtResource("5_hxmf3")
theme_override_font_sizes/font_size = 20
text = "Â¿CÃ³mo te llamas?"

[node name="Panel" type="Panel" parent="."]
offset_left = 529.0
offset_top = 293.0
offset_right = 745.0
offset_bottom = 332.0
theme_override_styles/panel = SubResource("StyleBoxFlat_blml6")

[node name="txt_nombre" type="TextEdit" parent="."]
offset_left = 539.0
offset_top = 296.0
offset_right = 724.0
offset_bottom = 328.0
theme_override_colors/background_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(0.180392, 0.180392, 0.180392, 1)
theme_override_colors/font_color = Color(0.180392, 0.180392, 0.180392, 1)
theme_override_fonts/font = ExtResource("6_g1klr")
theme_override_font_sizes/font_size = 14
placeholder_text = "ðŸ‘¤ Tu nombre"

[connection signal="pressed" from="btn_go_edad" to="." method="_on_btn_go_edad_pressed"]
[connection signal="pressed" from="btn_back_inicio" to="." method="_on_btn_back_inicio_pressed"]
[connection signal="text_changed" from="txt_nombre" to="." method="_on_txt_nombre_text_changed"]
